<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.abhinaybalusu.baccalculator.MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:weightSum="1"
        android:id="@+id/linearLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/weightLabelString"
            android:id="@+id/textView" />

        <EditText
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/weightEditText"
            android:hint="@string/enterWeightHint"
            android:textAlignment="center"
            android:textSize="@dimen/enterWeightHintSize"
            android:layout_weight="0.70" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/genderLabelString"
            android:id="@+id/textView2"
            android:layout_weight="0.28" />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/genderSwitch"
            android:textOn="@string/switchMaleString"
            android:textOff="@string/switchFemaleString"
            android:switchMinWidth="50dp"/>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/saveButtonTitle"
        android:id="@+id/buttonSave"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/linearLayout"
        android:layout_alignEnd="@+id/linearLayout" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/buttonSave"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:weightSum="1">

        <TextView
            android:layout_width="88dp"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/drinkSizeLabelString"
            android:id="@+id/textView3"
            android:paddingTop="2dp"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/ozRadioGroup">

            <RadioButton
                android:layout_width="85dp"
                android:layout_height="wrap_content"
                android:text="@string/oneOZString"
                android:id="@+id/oneOZRadioButton"
                android:checked="true"/>

            <RadioButton
                android:layout_width="85dp"
                android:layout_height="wrap_content"
                android:text="@string/fiveOZString"
                android:id="@+id/fiveOZRadioButton" />

            <RadioButton
                android:layout_width="85dp"
                android:layout_height="wrap_content"
                android:text="@string/twelveOZString"
                android:id="@+id/twelveOZRadioButton" />
        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/alcoholPercentageLabelString"
            android:id="@+id/textView4"
            android:layout_weight="0.07" />

        <SeekBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/seekBar"
            android:layout_weight="0.84"
            android:layout_marginTop="4dp"
            android:progress="5"
            android:max="25"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/seekBarPercentageTextView"
            android:id="@+id/seekBarPercentageTextView"
            android:layout_weight="0.13"
            android:textAlignment="center" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:weightSum="1">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addDrinkButtonTitle"
            android:id="@+id/buttonAddDrink"
            android:layout_weight="0.46" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resetButtonTitle"
            android:id="@+id/buttonReset"
            android:layout_weight="0.46" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60dp"
        android:weightSum="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/bacLevelString"
            android:id="@+id/bacLevelTextView"
            android:textAlignment="center"
            android:paddingTop="10dp"
            android:textStyle="bold"
            android:textSize="@dimen/bacLevelTextSize" />
    </LinearLayout>

    <ProgressBar
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:id="@+id/progressBar"
        android:layout_gravity="center_horizontal"
        />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/yourStatusString"
            android:id="@+id/textView5"
            android:textAlignment="center" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/statusTextViewString"
            android:id="@+id/statusTextView"
            android:textAlignment="center"
            android:layout_marginLeft="10dp"
            android:background="@drawable/rounded_corners_green"
            android:textSize="@dimen/statusTextViewTextSize" />
    </LinearLayout>

</LinearLayout>
